--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,8 @@ description: >-
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-url: "https://brusius.github.io"
+domain: brusius.github.io
+url: https://brusius.github.io
 twitter_username: davidbrusius
 github_username:  davidbrusius
 
